<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    tools:context=".main.MainActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="332dp"
        android:layout_height="74dp"
        android:fontFamily="@font/mitrsemibold"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#EE9F1A1A"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="312dp"
        android:layout_height="52dp"
        android:text="@string/detail_welcome"
        android:textAlignment="center"
        android:textColor="#FADDDD"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <Button
        android:id="@+id/button_to_web"
        android:layout_width="246dp"
        android:layout_height="47dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_text"
        android:textColor="#EE9F1A1A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

</androidx.constraintlayout.widget.ConstraintLayout>