<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002850"
    tools:context=".Information">

    <TextView
        android:id="@+id/textView"
        android:layout_width="235dp"
        android:layout_height="140dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="64dp"
        android:gravity="center|center_vertical"
        android:text="@string/contactInfo"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="271dp"
        android:layout_height="31dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="70dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/titleInfo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="271dp"
        android:layout_height="31dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="7dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/versionInfo"
        android:textColor="#C0C0C0"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="110dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="18dp"
        android:src="@mipmap/corona"
        app:layout_constraintBottom_toTopOf="@+id/text4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="271dp"
        android:layout_height="31dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="81dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/companyInfo"
        android:textColor="#C0C0C0"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>