<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002850"
    tools:context=".SplashActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/logo"
        android:layout_width="136dp"
        android:layout_height="142dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289"
        app:lottie_autoPlay="true"
        app:lottie_fileName="covid.json"
        app:lottie_loop="true"
        tools:ignore="MissingClass" />

    <TextView
        android:id="@+id/name_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mitrsemibold"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/name_product"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mitrmedium"
        android:gravity="center_horizontal"
        android:text="@string/name_apps"
        android:textColor="#F1C4C4"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_product"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mitrlight"
        android:gravity="center_horizontal"
        android:text="@string/version"
        android:textColor="#FAE3E3"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.939" />
</androidx.constraintlayout.widget.ConstraintLayout>